rparserbackend/rparserbackend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rparserbackend-vs    #name for vs. can be appname-vs
  namespace: istio-system   #need to replace namespace with required ns
spec:
  hosts:
  - "rparserapi.geminisolutions.com"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: rparserbackendsvc.dev.svc.cluster.local
